added findAll category feature
