# server/routes/category.js
@@ -1,0 +1,9 @@
+const express = require("express");
+const categories = require("../controllers/category");
+
+const router = express.Router();
+
+router.get("/", categories.find);
+router.post("/", categories.create);
+
+module.exports = router;
